converterd to webp

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="pages_content">
 <!--- Page 2-->
         <div id="page2" class="page">
-           <img class="icon page2_icon" src="artwork/teamwork_icon.png" alt="teamwork_icon" style="width: 30vw;height:auto;">
+           <img class="icon page2_icon" src="artwork/teamwork_icon.webp" alt="teamwork_icon" style="width: 30vw;height:auto;">
             <h2 class="Topic_header">Wer wir sind</h2>
             <p class="Topic_text page_about">Junge Menschen aus der Neustadt und Umzu, die sich für Lokalpolitik interessieren.</p>   
 
@@ -89,7 +89,7 @@
 
 <!--- Page 3-->
         <div id="page3" class="page">
-            <img class="icon page2_icon" src="artwork/actual_join_icon.png" alt="actualjoin_icon" style="width: 30vw;height:auto;">
+            <img class="icon page2_icon" src="artwork/actual_join_icon.webp" alt="actualjoin_icon" style="width: 30vw;height:auto;">
             
             <h2 class="Topic_header">Was wir wollen</h2>
             
@@ -107,7 +107,7 @@
 
 <!--- Page 4 -->
         <div id="page4" class="page">
-            <img class="icon page2_icon" src="artwork/join_icon.png" alt="join_icon" style="width: 30vw;height:auto;">
+            <img class="icon page2_icon" src="artwork/join_icon.webp" alt="join_icon" style="width: 30vw;height:auto;">
             <h2 class="Topic_header">Mach mit</h2>
             <p class="Topic_text">Du bist unter 25 und hast Interesse an Lokalpolitik? Dann mach mit und verbessere die Neustadt!</p>
         </div>
@@ -116,7 +116,7 @@
     <footer class="footer">
         <div class="inner_footer">
             <div class="logo_container">
-                <img src="/images/logo.png" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
+                <img src="/images/logo.webp" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
             </div>
             <div class="footer_third">
                 <h1>Rechtliches</h1>
