removed version tag, converted images to webp format

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.9.4]</title>
+        <title>JBN</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -106,7 +106,7 @@
                 <footer class="footer">
                     <div class="inner_footer">
                         <div class="logo_container">
-                            <img src="images/logo.png" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
+                            <img src="images/logo.webp" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
                         </div>
                         <div class="footer_third">
                             <h1>Rechtliches</h1>
@@ -122,6 +122,9 @@
                             <h1>Social Media</h1>
                             <li > <i class="fab fa-instagram-square mouse_pointer" onclick="window.location.href='https://www.instagram.com/jugendbeirat_neustadt/';"></i></li>
                             <li> <i class="fab fa-discord  mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';"></i></li>
+                        </div>
+                        <div class="footer_third">
+                            <p class="version_info">Version 1.0</p>
                         </div>
                     </div>
                 </footer>
