--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.9.4]</title>
+        <title>JBN</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
-        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/index.html"/>
 
         <!-- Size-Spezifisch -->
 
@@ -116,7 +116,7 @@
     <footer class="footer">
         <div class="inner_footer">
             <div class="logo_container">
-                <img src="/images/logo.webp" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
+                <img src="images/logo.webp" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
             </div>
             <div class="footer_third">
                 <h1>Rechtliches</h1>
@@ -132,6 +132,9 @@
                 <h1>Social Media</h1>
                 <li > <i class="fab fa-instagram-square mouse_pointer" onclick="window.location.href='https://www.instagram.com/jugendbeirat_neustadt/';"></i></li>
                 <li> <i class="fab fa-discord  mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';"></i></li>
+            </div>
+            <div class="footer_third">
+                <p class="version_info">Version 1.0</p>
             </div>
         </div>
     </footer>
