--- a/kontakt.html
+++ b/kontakt.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="kontakt_style.css">
         <link href="contact-form.css" rel="stylesheet">
         <meta name="Kontakt" content="">
-        <title>Kontakt</title>
+        <title>Kontakt | JBN</title>
         <link rel="canonical" href="https://jugendbeiratneustadt.de/kontakt.html"/>
     </head>
 
