hotfix for font-size

--- a/impressum.html
+++ b/impressum.html
@@ -47,7 +47,7 @@
                 <div class="text_wrapper">
                     <p class="extra_Topic_text cool_font">Kontaktmöglichkeiten</p>
                     <a style="cursor: pointer;" class="cool_font email_link" onclick="window.location.href='mailto:jugendinitiative.bremen@gmx.de';">jugendinitiative.bremen@gmx.de</a>
-                    <p class="block_text cool_font">Mehr Möglichkeiten: <a href="kontak">Kontakt</a></p>
+                    <p class="block_text cool_font">Mehr Möglichkeiten: <a href="kontakt.html">Kontakt</a></p>
                   </div>
 
                 <div class="text_wrapper">
@@ -88,7 +88,7 @@
                 <li> <i class="fab fa-discord  mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';"></i></li>
             </div>
             <div class="footer_third">
-                <p class="version_info">Version 1.1</p>
+                <p class="version_info">Version 1.3</p>
             </div>
         </div>
     </footer>
