datenschutz responsive design fix

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,14 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Datenschutz | JBN</title>
         <meta name="Jugendbeirat Neustadt" content="">
-      <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-      <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="impressum.css">
         <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
-
+        <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
     </head>
 
 <header>
