--- a/impressum.html
+++ b/impressum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,7 +88,7 @@
                 <li> <i class="fab fa-discord  mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';"></i></li>
             </div>
             <div class="footer_third">
-                <p class="version_info">Version 1.3</p>
+                <p class="version_info">Version 1.4</p>
             </div>
         </div>
     </footer>
