actual contrast update; forgot to actually do the change last commit lol

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <h2 class="subtitel">Wir machen Politik - und du kannst das auch!</h2>
 
-            <button class="btn" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
+            <button class="btn btn_primary" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
                 Discord beitreten
             </button>
 
