--- a/datenschutz.html
+++ b/datenschutz.html
@@ -35,7 +35,7 @@
   
               <h1 class="Titel">Datenschutz</h1>
   
-              <button class="btn" onclick="window.location.href='index.html';">Zurück</button>
+              <button class="btn btn_secondary" onclick="window.location.href='index.html';">Zurück</button>
             
                 <div class="Impressum_text">
 
