--- a/impressum.html
+++ b/impressum.html
@@ -36,7 +36,7 @@
 
             <h1 class="Titel">Impressum</h1>
 
-            <button class="btn" onclick="window.location.href='index.html';">Zurück</button>
+            <button class="btn btn_secondary" onclick="window.location.href='index.html';">Zurück</button>
 
             <div class="Impressum_text"> 
 
