IT WORKS! IT LIVES! PHP SUCKS!

--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
                 
             <div class="contact-form-body">
                 <div id="contact-form-main">
-                    <label class="Form-title font_rockwell_nova">Deine Idee einreichen (Momentan unter Wartung, nicht benutzen!)</label>
+                    <label class="Form-title font_rockwell_nova">Deine Idee einreichen</label>
                     <form id="fcf-form-id"  method="post" action="contact-form-process.php">
     
                         <div class="fcf-form-group">
