removed js function from php; added it to onclick call when submit is clicked

--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
     
                         <div class="fcf-form-group">
                             <div class="fcf-input-group">
-                                <input type="text" placeholder="Name" id="Name" name="user_name" class="fcf-form-control font_rockwell_nova" required>
+                                <input type="text" placeholder="Name" id="Name" name="user_name" onclick="pop_up_trigger()" class="fcf-form-control font_rockwell_nova" required>
                             </div>
                         </div>
                 
