removed php file; moved content to kontakt.html; renamed kontakt.html to kontakt.php

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -17,7 +17,7 @@
 <header>
   <div id="navbar" class="navbar">
       <span class="mouse_pointer" onclick="window.location.href='index.html'">Home</span>
-      <span class="mouse_pointer" onclick="window.location.href='kontakt.html'">Kontakt</span>
+      <span class="mouse_pointer" onclick="window.location.href='kontakt.php'">Kontakt</span>
   </div>
 
   <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();" >
