--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
             <div id="navbar" class="navbar">
                 <span class="active mouse_pointer" href="#home">Home</span>
-                <span class="mouse_pointer" onclick="window.location.href='kontakt.php'">Kontakt</span>
+                <span class="mouse_pointer" onclick="window.location.href='kontakt.html'">Kontakt</span>
             </div>
 
         <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();" >
