--- a/kontakt.html
+++ b/kontakt.html
@@ -21,13 +21,13 @@
         <link href="contact-form.css" rel="stylesheet">
         <meta name="Kontakt" content="">
         <title>Kontakt | JBN</title>
-        <link rel="canonical" href="https://jugendbeiratneustadt.de/kontakt.php"/>
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/kontakt.html"/>
     </head>
 
 <header>
         <div id="navbar" class="navbar">
             <span class="mouse_pointer" onclick="window.location.href='index.html'">Home</span>
-            <span class="active mouse_pointer" onclick="window.location.href='kontakt.php'">Kontakt</span>
+            <span class="active mouse_pointer" onclick="window.location.href='kontakt.html'">Kontakt</span>
         </div>
 
     <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();" >
@@ -138,19 +138,7 @@
 
     </body>
 
-<?php
 
-
-#Receive user input
-$user_name = $_POST['user_name'];
-$message = $_POST['message'];
-
-#Send email
-$headers = "from: $user_name.";
-$emailed_message = "$message";
-mail("cr4yfish1@gmail.com", "message Form Submission $headers", "$emailed_message");
-
-?>
 
 </html>
 
