added "cookie" for navbar so it's position is locally saved

--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
     </header>
 
 
-    <body class="dark_comp" onload="checkTheme()" >
+    <body class="dark_comp" onload="checkTheme(); checkNav();" >
 
 
         <div id="titelheaderContact" class="titelheaderContact"></div>
