--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <body onload="checkTheme();" class="dark_comp">
+    <body onload="checkTheme(); checkNav(); " class="dark_comp">
 
 <!--- Page 1 -->
         <div class="picture">
